--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,43 @@
+oauth2:
+  user:
+    github:
+      client-id: ${GITHUB_CLIENT_ID}
+      client-secret: ${GITHUB_CLIENT_SECRET}
+      login-url: https://github.com/login/oauth/authorize
+      token-uri: https://github.com/login/oauth/access_token
+      redirect-uri: http://localhost:8080/callback/github
+
 spring:
   application:
     name: workaholic
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: 'jdbc:h2:mem:test'
+    username: ${USER_NAME}
+    password: ${PASSWORD}
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  profiles:
+    include: oauth
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id: ${GITHUB_CLIENT_ID}
+            client-secret: ${GITHUB_CLIENT_SECRET}
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true
+        show_sql: true
 
 springdoc:
   packages-to-scan: com.project.workaholic
@@ -12,6 +49,4 @@ springdoc:
     display-request-duration: true
     operations-sorter: alpha
 
-github:
-  client-id: ${GITHUB_CLIENT_ID}
-  client-secret: ${GITHUB_CLIENT_SECRET}
+
