--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,28 +11,20 @@ spring:
   application:
     name: workaholic
   datasource:
+    hikari:
+      jdbc-url: jdbc:h2:mem://localhost/~/testdb;
     driver-class-name: org.h2.Driver
-    url: 'jdbc:h2:mem:test'
     username: ${USER_NAME}
     password: ${PASSWORD}
   h2:
     console:
       enabled: true
       path: /h2-console
-  profiles:
-    include: oauth
-  security:
-    oauth2:
-      client:
-        registration:
-          github:
-            client-id: ${GITHUB_CLIENT_ID}
-            client-secret: ${GITHUB_CLIENT_SECRET}
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
@@ -44,7 +36,7 @@ springdoc:
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
   swagger-ui:
-    path: /
+    path: /index.html
     disable-swagger-default-url: true
     display-request-duration: true
     operations-sorter: alpha
