--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ oauth2:
   github:
     client-id: ${GITHUB_CLIENT_ID}
     client-secret: ${GITHUB_CLIENT_SECRET}
+    accept: application/vnd.github+json
     base-url: https://api.github.com
     login-url: https://github.com/login/oauth/authorize
     redirect-url: http://localhost:8080/callback/github
