--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,34 +17,53 @@ spring:
   application:
     name: workaholic
   datasource:
-    hikari:
-      jdbc-url: jdbc:h2:mem://localhost/~/testdb;
-    driver-class-name: org.h2.Driver
-    username: ${H2_USER}
-    password: ${H2_PASSWORD}
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://192.168.115.11:14306/ANYLINK7
+    username: anylink
+    password: anylink
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true
+        format_sql: false
         show_sql: true
+    defer-datasource-initialization: true
+#  datasource:
+#    hikari:
+#      jdbc-url: jdbc:h2:mem://localhost/~/testdb;
+#    driver-class-name: org.h2.Driver
+#    username: ${H2_USER}
+#    password: ${H2_PASSWORD}
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
+#  jpa:
+#    database-platform: org.hibernate.dialect.H2Dialect
+#    hibernate:
+#      ddl-auto: update
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.H2Dialect
+#        format_sql: true
+#        show_sql: true
 
 springdoc:
   packages-to-scan: com.project.workaholic
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
   swagger-ui:
-    path: /index.html
-    disable-swagger-default-url: true
-    display-request-duration: true
+    path: demo-ui.html
+    tags-sorter: alpha
     operations-sorter: alpha
+  api-docs:
+    path: /api-docs/json
+  cache:
+    disabled: true
+  use-fqn: true
+
 
 
