* Ultimate 만 실행되던 환경 재구성 * Project 구조 Repository 에 종속되도록 변경 * 서비스 간소화

--- a/work/src/main/resources/application.yml
+++ b/work/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: workaholic
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://192.168.115.11:14306/ANYLINK7
-    username: anylink
-    password: anylink
+    url: jdbc:mariadb://localhost:3306/WORKAHOLIC
+    username: root
+    password: admin
   jpa:
     hibernate:
       ddl-auto: create
