--- a/vcs-integration/src/main/resources/application.yml
+++ b/vcs-integration/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 9000
+
 oauth2:
   github:
     client-id: ${GITHUB_CLIENT_ID}
@@ -14,7 +17,7 @@ oauth2:
 
 spring:
   application:
-    name: workaholic
+    name: workaholic-vcs
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://192.168.115.11:14306/ANYLINK7
@@ -30,3 +33,14 @@ spring:
         format_sql: false
         show_sql: true
     defer-datasource-initialization: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /
+    listener:
+      direct:
+        prefetch: 10
+      simple:
+        prefetch: 10
