--- a/work/src/main/resources/application.yml
+++ b/work/src/main/resources/application.yml
@@ -1,11 +1,13 @@
+server:
+  port: 8000
 spring:
   application:
-    name: workaholic
+    name: workaholic-project
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/WORKAHOLIC
-    username: root
-    password: admin
+    url: jdbc:mariadb://192.168.115.11:14306/ANYLINK7
+    username: anylink
+    password: anylink
   jpa:
     hibernate:
       ddl-auto: create
@@ -16,3 +18,9 @@ spring:
         format_sql: false
         show_sql: true
     defer-datasource-initialization: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /
