RabbitMQ을 활용해서 Project 생성 시 Clone 로직 까지 실행

--- a/work/src/main/resources/application.yml
+++ b/work/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     password: anylink
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
@@ -24,3 +24,4 @@ spring:
     username: guest
     password: guest
     virtual-host: /
+    exchange: workaholic.exchange
