--- a/kubernetes/src/main/resources/application.yml
+++ b/kubernetes/src/main/resources/application.yml
@@ -5,19 +5,4 @@ kubernetes:
 
 spring:
   application:
-    name: workaholic
-  datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://192.168.115.11:14306/ANYLINK7
-    username: anylink
-    password: anylink
-  jpa:
-    hibernate:
-      ddl-auto: update
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    properties:
-      hibernate:
-        format_sql: false
-        show_sql: true
-    defer-datasource-initialization: true
+    name: workaholic-kube
