--- a/vcs-integration/src/main/resources/application.yml
+++ b/vcs-integration/src/main/resources/application.yml
@@ -1,38 +1,13 @@
 server:
   port: 9000
 
-oauth2:
-  github:
-    client-id: ${GITHUB_CLIENT_ID}
-    client-secret: ${GITHUB_CLIENT_SECRET}
-    accept: application/vnd.github+json
-    base-url: https://api.github.com
-    access-token-url: https://github.com/login/oauth/access_token
-  gitlab:
-    client-id: ${GITLAB_CLIENT_ID}
-    client-secret: ${GITLAB_CLIENT_SECRET}
-    base-url: https://gitlab.com/api/v4
-    access-token-url: https://gitlab.com/oauth/token
-    redirect-uri: http://localhost:8080/gitlab/callback
+integration:
+  name: workaholic
+  base-url: ${BASE_URL}
 
 spring:
   application:
     name: workaholic-vcs
-  datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://192.168.115.11:14306/ANYLINK7
-    username: anylink
-    password: anylink
-  jpa:
-    hibernate:
-      ddl-auto: update
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    properties:
-      hibernate:
-        format_sql: false
-        show_sql: true
-    defer-datasource-initialization: true
   rabbitmq:
     host: localhost
     port: 5672
