--- a/vcs-integration/src/main/resources/application.yml
+++ b/vcs-integration/src/main/resources/application.yml
@@ -1,21 +1,30 @@
 server:
   port: 9000
-
 integration:
   name: workaholic
   base-url: ${BASE_URL}
-
 spring:
   application:
     name: workaholic-vcs
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://192.168.115.11:14306/ANYLINK7
+    username: anylink
+    password: anylink
+  jpa:
+    hibernate:
+      ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    properties:
+      hibernate:
+        format_sql: false
+        show_sql: true
+    defer-datasource-initialization: true
   rabbitmq:
     host: localhost
     port: 5672
     username: guest
     password: guest
     virtual-host: /
-    listener:
-      direct:
-        prefetch: 10
-      simple:
-        prefetch: 10
+    exchange: workaholic.exchange
