--- a/kubernetes/src/main/resources/application.yml
+++ b/kubernetes/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 10000
 kubernetes:
-  url: ${KUBE_SERVER}
+  url: https://kubernetes.docker.internal:6443
   token: ${KUBE_TOKEN}
   base-url: /api/v1/namespaces/default/
 
