Event 중 Exception 발생 시 Trace 에 Stack 저장 및 Status 관리

--- a/exception-processing/src/main/resources/application.yml
+++ b/exception-processing/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 server:
   port: 11000
 
+rabbitmq:
+  error:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /
+    exchange: workaholic.exchange
+
 spring:
   application:
     name: workaholic-vcs
@@ -19,10 +28,3 @@ spring:
         format_sql: false
         show_sql: true
     defer-datasource-initialization: true
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-    virtual-host: /
-    exchange: workaholic.exchange
