--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -4,6 +4,22 @@ workaholic:
 server:
   port: 8000
 
+rabbitmq:
+  vcs:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /
+    exchange: workaholic.exchange
+  error:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /
+    exchange: workaholic.exchange
+
 spring:
   application:
     name: workaholic-project
@@ -22,10 +38,3 @@ spring:
         format_sql: false
         show_sql: true
     defer-datasource-initialization: true
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-    virtual-host: /
-    exchange: workaholic.exchange
