--- a/vcs-integration/src/main/resources/application.yml
+++ b/vcs-integration/src/main/resources/application.yml
@@ -5,6 +5,22 @@ integration:
   name: workaholic
   base-url: ${BASE_URL}
 
+rabbitmq:
+  kube:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /
+    exchange: workaholic.exchange
+  error:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: /
+    exchange: workaholic.exchange
+
 spring:
   application:
     name: workaholic-vcs
@@ -23,10 +39,3 @@ spring:
         format_sql: false
         show_sql: true
     defer-datasource-initialization: true
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
-    virtual-host: /
-    exchange: workaholic.exchange
